--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -100,3 +100,35 @@ color: #757575;
 font-size: 20px;
 color: #474747;
 }
+/* what i do styls */
+.what-i-do{
+    margin-top: 130px;
+    
+}
+
+.skill-container{
+    display: flex;
+    gap: 24px;
+    margin-top: 130px;
+}
+.skill-title{
+    font-weight: 700;
+font-size: 20px;
+margin-top: 30px;
+margin-bottom: 20px;
+}
+.skill-description{
+    font-weight: 400;
+font-size: 16px;
+color: #757575;
+}
+.skill{
+    background: #FFFFFF;
+box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+border-radius: 5px;
+padding: 30px;
+}
+.resume{
+    margin-top: 130px;
+    margin-bottom: 50px;
+}
