--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -76,6 +76,7 @@ padding: 130px 150px;
     text-align: center;
     font-weight: 700;
 font-size: 35px;
+margin-bottom: 100px;
 }
 .section-description{
    margin-bottom: 30px;
@@ -131,4 +132,34 @@ padding: 30px;
 .resume{
     margin-top: 130px;
     margin-bottom: 50px;
+}
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume .title{
+    font-weight: 700;
+font-size: 25px;
+color: #474747;
+margin-bottom: 10px;
+
+}
+.resume .subtitle{
+    font-weight: 600;
+font-size: 20px;
+color: #757575;
+margin-bottom: 20px;
+
+}
+.resume .description{
+    color: #757575;
+
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
 }
